--- a/python/templates/homework4.html
+++ b/python/templates/homework4.html
@@ -127,7 +127,8 @@
                 success: function (response) {
                     if (response['result'] == 'success') {
 
-                        let orders = response['data']
+                        let orders = response['orders'];
+                        console.log(orders);
                         for (let i = 0; i < orders.length; i++) {
                             let review = reviews[i]
                             make_card(orders[i]['inputGroupSelect01'], orders[i]['name'], orders[i]['address'], orders[i]['tel'])
