--- a/python/templates/homework4.html
+++ b/python/templates/homework4.html
@@ -127,8 +127,8 @@
                 success: function (response) {
                     if (response['result'] == 'success') {
 
-                        let orders = response['orders'];
-                        console.log(orders);
+                        let orders = response['data'];
+//                         console.log(orders);
                         for (let i = 0; i < orders.length; i++) {
                             let order = orders[i]
                             make_card(orders[i]['inputGroupSelect01'], orders[i]['name'], orders[i]['address'], orders[i]['tel'])
